[package]
name = "string-interner-comparison"
version = "0.1.0"
edition = "2018"
publish = false

authors = ["Christopher Durham (CAD97) <cad97@cad97.com>"]

[dependencies]
argh = "0.1"
parity-wordlist = "1.3"
libc = "0.2.72"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
bytesize = "1.0.1"
textplots = "0.5.1"
parse-display = "0.1.2"

string-interner = "0.10"
lasso = "0.3"
lalrpop-intern = "0.15"
intaglio = "1.1"
strena = { git = "https://github.com/CAD97/strena.git", rev = "1ddbf48b9f639ffbb4c89b0d51cb005fc0e3a4f7" }
cargo = "0.45.1"

[dev-dependencies]
criterion = "0.3"
